# coursework_3

./: README.md  pyproject.toml
data/: operations.json
src/: main.py
tests/: test_last_five_transactions.py  test_utils.py
utils/: last_five_transactions.py  utils.py
